bootstrapping (#176)
* thoth grpc service.

an unfortunate reformatting event, also, too

* clean up dep declarations

* Provide action upon Thoth inception.

clean up parameters/etc
dep clean up for kq/ep madness, yet again

* Inline action upon Thoth inception.

clean up close errors with KerlSpace

* decent amount of logging/clean up on thoth dynamic membership

For the moment, just disable the rebalancing test until I can pay some much needed attention to it.

* Refactor Seal to have Any message type value()

Allows Seals of arbitrary self describing protobuf messages

* Fix mispelling of proto packages - d'oh

Add leyden module, new proto services for such.

* basic skeleton of Binder and Reconciliation service infra

* MVStore

Finally a use for the ProtobufDatatype - lol

* Further flesh on the bone

* Further flesh on the bone

* The general idea.

Flesh out the remaining comms, validation strategy, etc.

Replication pattern established.

* Flesh out get/unbind API

* Woohoo! First successful replication.

* correct reconciliation logic.  track digests of bound.

* General cleanup.  Add README.md's

button up Leyden for now

* Moar cleanup. Expose dht in proc domain

* test comms cleanup

* refactor out subdomain behaviour from top level ProcessDomain with ProcessContainerDomain

* correctly attach sources

* moar cleanup

* remove

* cache?

* process domain uses the event validation of the DHT's Ani

* properly parameterize ProcessDomain

Geebus :)

* use active majority bootstrapping

* revert RingIterator bootstrap majority

* logging

* use controlled identifier directly for seed from Node

* override additional

* amp logging

* amp logging

* targeted loggin

* better config.  just model for now

* arg

* again?

* moar logging

* decouple context

* only unique

* add BootstrapVerifiers to provide key state resolution via delegation to successors in j