@@ -6,8 +6,6 @@
  */
 package com.salesforce.apollo.model;
 
-import com.salesfoce.apollo.choam.proto.Foundation;
-import com.salesfoce.apollo.choam.proto.FoundationSeal;
 import com.salesforce.apollo.archipelago.LocalServer;
 import com.salesforce.apollo.archipelago.Router;
 import com.salesforce.apollo.archipelago.ServerConnectionCache;
@@ -15,15 +13,14 @@ import com.salesforce.apollo.choam.Parameters;
 import com.salesforce.apollo.choam.Parameters.Builder;
 import com.salesforce.apollo.choam.Parameters.ProducerParameters;
 import com.salesforce.apollo.choam.Parameters.RuntimeParameters;
+import com.salesforce.apollo.choam.proto.FoundationSeal;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.cryptography.DigestAlgorithm;
 import com.salesforce.apollo.delphinius.Oracle;
 import com.salesforce.apollo.delphinius.Oracle.Assertion;
 import com.salesforce.apollo.membership.ContextImpl;
 import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
-import com.salesforce.apollo.stereotomy.EventValidation;
 import com.salesforce.apollo.stereotomy.StereotomyImpl;
-import com.salesforce.apollo.stereotomy.identifier.spec.IdentifierSpecification;
 import com.salesforce.apollo.stereotomy.mem.MemKERL;
 import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.utils.Entropy;
@@ -197,10 +194,6 @@ public class DomainTest {
 
     @BeforeEach
     public void before() throws Exception {
-
-        final var commsDirectory = Path.of("target/comms");
-        commsDirectory.toFile().mkdirs();
-
         var ffParams = com.salesforce.apollo.fireflies.Parameters.newBuilder();
         var entropy = SecureRandom.getInstance("SHA1PRNG");
         entropy.setSeed(new byte[] { 6, 6, 6 });
@@ -216,21 +209,22 @@ public class DomainTest {
                                   .collect(Collectors.toMap(controlled -> controlled.getIdentifier().getDigest(),
                                                             controlled -> controlled));
 
-        var foundation = Foundation.newBuilder();
-        identities.keySet().forEach(d -> foundation.addMembership(d.toDigeste()));
-        var sealed = FoundationSeal.newBuilder().setFoundation(foundation).build();
+        var sealed = FoundationSeal.newBuilder().build();
         final var group = DigestAlgorithm.DEFAULT.getOrigin();
         identities.forEach((d, id) -> {
             final var member = new ControlledIdentifierMember(id);
             var localRouter = new LocalServer(prefix, member).router(ServerConnectionCache.newBuilder().setTarget(30));
             routers.add(localRouter);
-            var domain = new ProcessDomain(group, member, params, "jdbc:h2:mem:", checkpointDirBase,
-                                           RuntimeParameters.newBuilder()
-                                                            .setFoundation(sealed)
-                                                            .setContext(context)
-                                                            .setCommunications(localRouter), new InetSocketAddress(0),
-                                           commsDirectory, ffParams, EventValidation.NONE,
-                                           IdentifierSpecification.newBuilder());
+            var dbUrl = String.format("jdbc:h2:mem:%s-%s;DB_CLOSE_DELAY=-1", member.getId(), UUID.randomUUID());
+            var pdParams = new ProcessDomain.ProcessDomainParameters(dbUrl, Duration.ofMinutes(1), checkpointDirBase,
+                                                                     Duration.ofMillis(10), 0.00125,
+                                                                     Duration.ofMinutes(1), 3, 10, 0.1);
+            var domain = new ProcessDomain(group, member, pdParams, params, RuntimeParameters.newBuilder()
+                                                                                             .setFoundation(sealed)
+                                                                                             .setContext(context)
+                                                                                             .setCommunications(
+                                                                                             localRouter),
+                                           new InetSocketAddress(0), ffParams, null);
             domains.add(domain);
             localRouter.start();
         });
@@ -246,7 +240,7 @@ public class DomainTest {
                                                                            .filter(c -> !c.active())
                                                                            .map(Domain::logState)
                                                                            .toList()));
-        var oracle = domains.get(0).getDelphi();
+        var oracle = domains.getFirst().getDelphi();
         oracle.add(new Oracle.Namespace("test")).get();
         smoke(oracle);
     }
